--- a/.env
+++ b/.env
@@ -32,3 +32,8 @@ APP_SECRET=eebf0d473c563b941c5d0ac4275d175f
 DATABASE_URL="mysql://root:root@127.0.0.1:8889/webcv?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://joel.sylvius18@gmail.com:jonitro18@default
+###< symfony/google-mailer ###
