--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "symfony/webpack-encore-bundle": "^1.8",
         "symfony/yaml": "5.1.*",
         "symfonycasts/reset-password-bundle": "^1.1",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.1",
+        "twig/intl-extra": "^3.1",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
