add elastiquesearch on project + design + change role user

--- a/.env
+++ b/.env
@@ -37,3 +37,7 @@ DATABASE_URL="mysql://root:root@127.0.0.1:8889/webcv?serverVersion=5.7"
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://joel.sylvius18@gmail.com:jonitro18@default
 ###< symfony/google-mailer ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://localhost:9200/
+###< friendsofsymfony/elastica-bundle ###
