--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "friendsofsymfony/elastica-bundle": "^6.0.x-dev",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "ruflin/elastica": "^7.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
