Change mail gestion

--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ DATABASE_URL="mysql://root:root@127.0.0.1:8889/webcv?serverVersion=5.7"
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://joel.sylvius18@gmail.com:jonitro18@default
+MAILER_DSN=gmail://contacts.webcv@gmail.com:cezseN-wegpec-nibdu8@default
 ###< symfony/google-mailer ###
 
 ###> friendsofsymfony/elastica-bundle ###
