update design and add search user

--- a/config/packages/fos_elastica.yaml
+++ b/config/packages/fos_elastica.yaml
@@ -77,6 +77,15 @@ fos_elastica:
             persistence:
                 driver: orm
                 model: App\Entity\Training
+        user:
+            properties:
+                id: ~
+                name: ~
+                email: ~
+                roles: ~
+            persistence:
+                driver: orm
+                model: App\Entity\User
 
 
             
