--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,7 @@ services:
             $professionalcourseFinder: '@fos_elastica.finder.professionalcourse'
             $skillsFinder: '@fos_elastica.finder.skills'
             $trainingFinder: '@fos_elastica.finder.training'
+            $userFinder: '@fos_elastica.finder.user'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
